fix overflow problem on mobile

--- a/source/css/_partial/header.styl
+++ b/source/css/_partial/header.styl
@@ -80,7 +80,7 @@ $logo-text
         transform: rotate(-45deg)
 
 #sub-nav
-  position: fixed
+  position: absolute
   top: 0
   right: 42px
 
