--- a/source/css/_partial/sidebar-aside.styl
+++ b/source/css/_partial/sidebar-aside.styl
@@ -143,13 +143,3 @@ $nav-link
       &:hover
         a
           color: #3fb0e7
-
-body
-  transition: padding .2s linear
-  &.right-side
-    padding-left: 260px
-    overflow-x: hidden
-    @media mq-max-760
-      overflow-y: hidden
-  @media mq-max-1020
-    width: 100%
