--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -23,12 +23,26 @@ input, button
        url(font-icon-path + ".svg#fontawesomeregular?v=#" + font-icon-version) format("svg")
 
 html, body, #container
-  font-family: "Helvetica Neue", Helvetica, "Nimbus Sans L", Arial, "Liberation Sans", "Hiragino Sans GB", "Source Han Sans CN", "Source Han Sans SC", "Microsoft YaHei", "Wenquanyi Micro Hei", "WenQuanYi Zen Hei", "ST Heiti", SimHei, "WenQuanYi Zen Hei Sharp", sans-serif; !important;
+  font-family: "Helvetica Neue", Helvetica, "Nimbus Sans L", Arial, "Liberation Sans", "Hiragino Sans GB", "Source Han Sans CN", "Source Han Sans SC", "Microsoft YaHei", "Wenquanyi Micro Hei", "WenQuanYi Zen Hei", "ST Heiti", SimHei, "WenQuanYi Zen Hei Sharp", sans-serif !important
+
+@media mq-max-760
+  html
+    height: 100%
+    overflow-x: hidden
 
 body
   background: color-background
-  font: font-size font-sans
-  -webkit-text-size-adjust: 100%
+  -webkit-tap-highlight-color: rgba(0,0,0,0)
+  transition: padding .2s linear
+  &.right-side
+    padding-left: 260px
+    overflow-x: hidden
+    @media mq-max-760
+      overflow-y: hidden
+      height: 100%
+      box-sizing: border-box
+  @media mq-max-1020
+    width: 100%
 
 .outer
   clearfix()
